src/objects/Individual.object
<CustomObject>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <description>Pardot Area of interest preferences</description>
        <label>Area of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airline management</fullName>
                </value>
                <value>
                    <fullName>Airline operations and quality</fullName>
                </value>
                <value>
                    <fullName>Air navigation services</fullName>
                </value>
                <value>
                    <fullName>Airport planning, operations and management</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Civil aviation</fullName>
                </value>
                <value>
                    <fullName>Dangerous goods</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Fares and ticketing</fullName>
                </value>
                <value>
                    <fullName>Financial services and revenue management</fullName>
                </value>
                <value>
                    <fullName>Flight operations</fullName>
                </value>
                <value>
                    <fullName>Ground operations</fullName>
                </value>
                <value>
                    <fullName>Law and regulations</fullName>
                </value>
                <value>
                    <fullName>Passenger services</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Security and risk management</fullName>
                </value>
                <value>
                    <fullName>Travel and tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Individual company name</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Individual country</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Individual email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Individual industry</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Accomodation</fullName>
                </value>
                <value>
                    <fullName>Aerospace/Defence</fullName>
                </value>
                <value>
                    <fullName>Aircraft Maintenance</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Airline - Cargo Only</fullName>
                </value>
                <value>
                    <fullName>Airline Suppliers</fullName>
                </value>
                <value>
                    <fullName>Air Navigation</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Airport (Operators and Owners)</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Associations, Alliances and NGOs</fullName>
                </value>
                <value>
                    <fullName>ATC (Air Traffic Control)</fullName>
                </value>
                <value>
                    <fullName>Cargo Agent</fullName>
                </value>
                <value>
                    <fullName>Car Rentals</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Cruise Lines</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment Industry</fullName>
                </value>
                <value>
                    <fullName>Equipment Manufacturers</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Freight Forwarding</fullName>
                </value>
                <value>
                    <fullName>Fuel and Energy</fullName>
                </value>
                <value>
                    <fullName>GDS (Global Distribution System)</fullName>
                </value>
                <value>
                    <fullName>General Public</fullName>
                </value>
                <value>
                    <fullName>General Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Global Media</fullName>
                </value>
                <value>
                    <fullName>Government/Policy Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Individual phone number</description>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Timestamp to store when access token of GDPR portal was last generated. It controls the 1h session validity</description>
        <label>Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>Token used during access control of the GDPR portal</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aeropolitical</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Gen.Management</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing&amp;Sales</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Security&amp; Facilitation</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>